fixes flickering current step when editing running line, prepares to run interpreter automatically

--- a/src/interpreter/grammar.css
+++ b/src/interpreter/grammar.css
@@ -38,3 +38,7 @@
 .unavailable {
     color: purple;
 }
+
+.current-step {
+    border-bottom: 5px solid white;
+}
